Apply QFile::encodeName on local files to ensure proper encoding (uses toLocal8Bit internally). This should take care of encoding problems.

TODO for 4.5: evaluate whether we can use this for regular stream URLs
too.

BUG: 198008